--- a/src/sass/2-elements/_div.sass
+++ b/src/sass/2-elements/_div.sass
@@ -8,8 +8,8 @@
     margin-top: 15px
 
 .additional-info
-    margin: 0
-    padding: 0
+    // margin: 0
+    // padding: 0
 
 .content
     padding-top: 80px
